--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <th>Email</th>
             </tr>
         </thead>
-        <tbody id="userTableBody">
+        <tbody id="user">
 
         </tbody>
     </table>
